--- a/css/material_edit.css
+++ b/css/material_edit.css
@@ -2,6 +2,7 @@
 body {
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   min-width: 720px;
+
 }
 
 a {
@@ -23,6 +24,10 @@ a {
 .center {
   text-align: center;
 }
+.vacenter {
+  vertical-align: middle;
+}
+
 .full-width {
   width: 100%;
 }
@@ -106,45 +111,103 @@ a {
 
 
 /* DATA TABLE */
+.mdl-shadow--2dp.card-data-table .mdl-data-table {
+  border: 0;
+}
+
+
 .mdl-data-table.mdl-shadow--2dp {
   border: 0;
 }
 
+/* data-table head */
 .data-table thead th {
-  line-height: 1;
+  line-height: 1.3;
   font-weight: 500;
+  background-color: #f5f5f5;
+  vertical-align: middle;
+  padding-bottom: 6px;
+  padding-top: 10px;
+  height: unset;
 }
 
-.data-table .two-line td {
-  line-height: 1.2;
-  height: 56px;
 
-}
-
-.data-table .one-line {
+/* data-table body */
+.data-table tbody .one-line {
   line-height: 1.2;
   height: 48px;
-
 }
-.data-table .one-line.slim-row {
+.data-table tbody .one-line.slim-row {
   height: 42px;
-
-
-
 }
 
 
-
-
-
-
-
-
-.data-table tbody td.cell-button {
+.data-table tbody td {
+  line-height: 1.2;
+  vertical-align: middle;
   padding-top: 0;
   padding-bottom: 0;
+  min-height: 32px;
+}
+.data-table .mdl-list__item {
+  font-size: 14px;
+  letter-spacing: 0;
+  font-weight: 500;
+  padding: 10px 0;
 
 }
+
+.data-table .mdl-list__item .mdl-list__item-avatar {
+  font-size: 12px;
+  text-align: center;
+  height: 32px;
+  line-height: 32px;
+  width: 32px;
+border: 1px solid rgba(0,0,0,0.24);
+background-color: #fff;
+color: rgba(0,0,0,0.54);
+margin-right: 10px;
+}
+.data-table .wide-text {
+/*min-width: 150px;*/
+white-space: pre-line;
+
+}
+
+
+
+.row-alert {
+  font-size: 14px;
+  font-weight: 500;
+  color: #546e7a;
+  padding-left: 10px;
+  padding-top: 5px;
+  vertical-align: middle;
+}
+
+
+
+
+
+
+.data-table .text-chip {
+  color: rgba(0,0,0, 0.87);
+  background-color: #dedede;
+  border-radius: 10px;
+  display: inline-block;
+  height: 16px;
+  line-height: 16px;
+  font-size: 12px;
+  /*font-weight: 400;*/
+  padding: 0 10px;
+  position: relative;
+  top: 3px;
+}
+
+
+
+
+
 
 
 td.tbody-cell-toolbar {
@@ -160,21 +223,9 @@ td.tbody-cell-toolbar {
   padding-bottom: 0;
 
 }
-.table-header th {
-  /*padding-bottom: 4px;*/
-  line-height: 16px;
-  height: auto;
-  padding-top: 8px;
 
-}
-.table-header td {
-  /*border-top-color: transparent;*/
 
-}
 
-.table-header tr td:first-child {
-  /*border-bottom: 1px solid transparent;*/
-}
 
 
 
