--- a/css/material_edit.css
+++ b/css/material_edit.css
@@ -1,13 +1,17 @@
 /* MY EDIT */
 body {
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  min-width: 720px;
+  /*min-width: 720px;*/
 
 }
 
 a {
   text-decoration: none;
 }
+select {
+  cursor: pointer;
+}
+
 
 .toleft {
   float: left;
@@ -31,6 +35,14 @@ a {
 .full-width {
   width: 100%;
 }
+.clearfix:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+
+
 .ukaz {
   outline: 1px solid red;
   border: 1px solid red;
@@ -110,27 +122,61 @@ a {
 
 
 
-/* DATA TABLE */
+/* CARD DATA TABLE */
+.card-data-table {
+  min-height: 100px;
+
+}
+.card-data-table .mdl-card__title {
+  /*background-color: #f5f5f5;*/
+  /*height: 56px;*/
+
+}
+.card-data-table .card-title-upper {
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.02em;
+}
 .mdl-shadow--2dp.card-data-table .mdl-data-table {
   border: 0;
 }
 
 
-.mdl-data-table.mdl-shadow--2dp {
-  border: 0;
+
+.card-data-table .mdl-card__title .mdl-textfield__label:after {
+
+
 }
+
+.card-data-table .mdl-card__title .mdl-textfield.is-focused {
+  /*background-color: #fff;*/
+  /*width: 100%;*/
+}
+.card-data-table .mdl-card__title .mdl-textfield__input {
+  /*border: 0;*/
+  /*font-size: 16px;*/
+}
+
+
 
 /* data-table head */
 .data-table thead th {
   line-height: 1.3;
   font-weight: 500;
-  background-color: #f5f5f5;
+  /*background-color: #f5f5f5;*/
   vertical-align: middle;
   padding-bottom: 6px;
   padding-top: 10px;
   height: unset;
+    padding-left: 0px;
+    padding-right: 0px;
 }
-
+@media screen and (max-width: 1024px) {
+.data-table thead th {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
 
 /* data-table body */
 .data-table tbody .one-line {
@@ -141,6 +187,22 @@ a {
   height: 42px;
 }
 
+@media screen and (max-width: 1024px) {
+  .data-table tbody td:first-of-type, .data-table thead th:first-of-type {
+    padding-left: 8px;
+  }
+  .data-table tbody td:last-of-type, .data-table thead th:last-of-type {
+    padding-right: 8px;
+  }
+}
+/* prasarna */
+@media screen and (max-width: 1024px) {
+  .mdl-grid {
+    padding: 0;
+  }
+
+}
+
 
 .data-table tbody td {
   line-height: 1.2;
@@ -148,9 +210,19 @@ a {
   padding-top: 0;
   padding-bottom: 0;
   min-height: 32px;
+  white-space: normal;
+  padding-left: 0px;
+  padding-right: 0px;
 }
+@media screen and (max-width: 1024px) {
+.data-table tbody td {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
+
 .data-table .mdl-list__item {
-  font-size: 14px;
+  font-size: 13px;
   letter-spacing: 0;
   font-weight: 500;
   padding: 10px 0;
@@ -168,25 +240,22 @@ background-color: #fff;
 color: rgba(0,0,0,0.54);
 margin-right: 10px;
 }
-.data-table .wide-text {
-/*min-width: 150px;*/
-white-space: pre-line;
+.data-table .broken-text {
+/*max-width: 200px;*/
+/*white-space: normal;*/
 
 }
 
 
 
-.row-alert {
-  font-size: 14px;
-  font-weight: 500;
-  color: #546e7a;
-  padding-left: 10px;
-  padding-top: 5px;
-  vertical-align: middle;
+
+
+
+.data-table .tbody-alert {
+  color: rgba(0,0,0,0.54);
+  font-size: 16px;
+  margin: 26px auto;
 }
-
-
-
 
 
 
@@ -202,6 +271,7 @@ white-space: pre-line;
   padding: 0 10px;
   position: relative;
   top: 3px;
+  margin-right: 3px;
 }
 
 
@@ -224,7 +294,7 @@ td.tbody-cell-toolbar {
 
 }
 
-
+.table-pagination
 
 
 
