--- a/css/material_edit.css
+++ b/css/material_edit.css
@@ -122,30 +122,88 @@ select {
 
 
 
-/* CARD DATA TABLE */
-.card-data-table {
-  min-height: 100px;
-
-}
+/* DATA TABLE */
 .card-data-table .mdl-card__title {
   /*background-color: #f5f5f5;*/
   /*height: 56px;*/
 
 }
-.card-data-table .card-title-upper {
+.data-table.mdl-shadow--2dp {
+  border: 0;
+
+}
+
+.data-table .table-title-upper {
   font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 0.02em;
+
 }
-.mdl-shadow--2dp.card-data-table .mdl-data-table {
+
+.data-table thead th {
+  line-height: 1.3;
+  font-weight: 500;
+  /*background-color: #f5f5f5;*/
+  vertical-align: middle;
+  padding-bottom: 6px;
+  padding-top: 10px;
+  /*height: unset;*/
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.data-table td {
+  line-height: 1.2;
+  vertical-align: middle;
+  padding-top: 0;
+  padding-bottom: 0;
+  min-height: 32px;
+  white-space: normal;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.data-table tfoot td {
+  height: 48px;
   border: 0;
+  font-size: 12px;
+  /*color: rgba(0, 0, 0, 0.54);*/
+  /*line-height: 1;*/
 }
+
+@media screen and (max-width: 1024px) {
+  .data-table td:first-of-type, .data-table th:first-of-type {
+    padding-left: 8px;
+  }
+  .data-table td:last-of-type, .data-table th:last-of-type {
+    padding-right: 8px;
+  }
+}
+
+
+
+.data-table .table-row-menu i {
+  /*line-height: 48px;*/
+  /*vertical-align: middle;*/
+
+}
+
+
+/* prasarna */
+/*dopyt, toto ešte neviem, či použijem*/
+@media screen and (max-width: 1024px) {
+  .mdl-grid {
+    padding: 0;
+  }
+
+}
+
+
+
+
 
 
 
 .card-data-table .mdl-card__title .mdl-textfield__label:after {
-
-
 }
 
 .card-data-table .mdl-card__title .mdl-textfield.is-focused {
@@ -159,26 +217,15 @@ select {
 
 
 
-/* data-table head */
-.data-table thead th {
-  line-height: 1.3;
-  font-weight: 500;
-  /*background-color: #f5f5f5;*/
-  vertical-align: middle;
-  padding-bottom: 6px;
-  padding-top: 10px;
-  height: unset;
-    padding-left: 0px;
-    padding-right: 0px;
-}
+
 @media screen and (max-width: 1024px) {
 .data-table thead th {
-    padding-left: 0px;
-    padding-right: 0px;
+/*    padding-left: 0px;
+    padding-right: 0px;*/
   }
 }
 
-/* data-table body */
+
 .data-table tbody .one-line {
   line-height: 1.2;
   height: 48px;
@@ -187,39 +234,7 @@ select {
   height: 42px;
 }
 
-@media screen and (max-width: 1024px) {
-  .data-table tbody td:first-of-type, .data-table thead th:first-of-type {
-    padding-left: 8px;
-  }
-  .data-table tbody td:last-of-type, .data-table thead th:last-of-type {
-    padding-right: 8px;
-  }
-}
-/* prasarna */
-@media screen and (max-width: 1024px) {
-  .mdl-grid {
-    padding: 0;
-  }
 
-}
-
-
-.data-table tbody td {
-  line-height: 1.2;
-  vertical-align: middle;
-  padding-top: 0;
-  padding-bottom: 0;
-  min-height: 32px;
-  white-space: normal;
-  padding-left: 0px;
-  padding-right: 0px;
-}
-@media screen and (max-width: 1024px) {
-.data-table tbody td {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-}
 
 .data-table .mdl-list__item {
   font-size: 14px;
@@ -247,8 +262,30 @@ margin-right: 10px;
 }
 
 
+/* prasarna */
+.mdl-tooltip {
+  font-size: 11px;
+  padding: 12px;
+}
 
+.mdl-tooltip--right.tooltip-triangle {
+  padding: 12px;
 
+}
+
+.mdl-tooltip--right.tooltip-triangle:before {
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+
+  border-right:10px solid rgba(97,97,97, 0.9);
+display: block;
+content: '';
+position: fixed;
+left: -8px;
+top: 14px;
+}
 
 
 .data-table .tbody-alert {
