--- a/css/material_edit.css
+++ b/css/material_edit.css
@@ -1,23 +1,21 @@
 /* MY EDIT */
 body {
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  /*min-width: 720px;*/
-
 }
-
 a {
   text-decoration: none;
 }
 select {
   cursor: pointer;
 }
-
-
 .toleft {
   float: left;
 }
 .toright {
   float: right;
+}
+.tocenter {
+  margin: auto;
 }
 .left {
   text-align: left;
@@ -31,7 +29,6 @@ select {
 .vacenter {
   vertical-align: middle;
 }
-
 .full-width {
   width: 100%;
 }
@@ -39,6 +36,9 @@ select {
   content: '';
   display: table;
   clear: both;
+}
+.flexbox {
+  display: flex;
 }
 
 
@@ -61,9 +61,6 @@ select {
     padding-left: 56px;
   }
 }
-.ui-app-row .mdl-grid {
-  width: 100%;
-}
 .ui-app-row .mdl-layout-title {
   font-size: 16px;
   padding-top: 2px;
@@ -74,13 +71,18 @@ select {
 /* header navigation */
 .ui-app-row .header-nav {
   justify-content: center;
+  width: 300px;
+  height: 56px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin-left: -150px;
 }
 .ui-app-row .header-nav-link {
   height: 53px;
   line-height: 58px;
   border-bottom: 3px solid transparent;
   padding: 0 24px;
-
   color: rgba(255,255,255,.7); /*dopyt, kopíroval som z firebase, možno iná farba*/
   opacity: unset;
   letter-spacing: 0.02em;
@@ -189,12 +191,11 @@ select {
 
 
 /* prasarna */
-/*dopyt, toto ešte neviem, či použijem*/
 @media screen and (max-width: 1024px) {
-  .mdl-grid {
+  .mdl-grid, *[class^="mdl-cell"] {
     padding: 0;
+    width: 100%;
   }
-
 }
 
 
