--- a/css/material_edit.css
+++ b/css/material_edit.css
@@ -1,23 +1,21 @@
 /* MY EDIT */
 body {
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  /*min-width: 720px;*/
-
 }
-
 a {
   text-decoration: none;
 }
 select {
   cursor: pointer;
 }
-
-
 .toleft {
   float: left;
 }
 .toright {
   float: right;
+}
+.tocenter {
+  margin: auto;
 }
 .left {
   text-align: left;
@@ -31,7 +29,6 @@ select {
 .vacenter {
   vertical-align: middle;
 }
-
 .full-width {
   width: 100%;
 }
@@ -39,6 +36,9 @@ select {
   content: '';
   display: table;
   clear: both;
+}
+.flexbox {
+  display: flex;
 }
 
 
@@ -61,9 +61,6 @@ select {
     padding-left: 56px;
   }
 }
-.ui-app-row .mdl-grid {
-  width: 100%;
-}
 .ui-app-row .mdl-layout-title {
   font-size: 16px;
   padding-top: 2px;
@@ -74,13 +71,18 @@ select {
 /* header navigation */
 .ui-app-row .header-nav {
   justify-content: center;
+  width: 300px;
+  height: 56px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin-left: -150px;
 }
 .ui-app-row .header-nav-link {
   height: 53px;
   line-height: 58px;
   border-bottom: 3px solid transparent;
   padding: 0 24px;
-
   color: rgba(255,255,255,.7); /*dopyt, kopíroval som z firebase, možno iná farba*/
   opacity: unset;
   letter-spacing: 0.02em;
@@ -91,6 +93,8 @@ select {
 .ui-app-row .header-nav-link.active {
   border-bottom-color: #fff;
 }
+
+
 /* header user info */
 .header-list .mdl-list__item {
   font-size: 14px;
@@ -189,13 +193,12 @@ select {
 
 
 /* prasarna */
-/*dopyt, toto ešte neviem, či použijem*/
-@media screen and (max-width: 1024px) {
-  .mdl-grid {
+/*@media screen and (max-width: 1024px) {
+  .mdl-grid, *[class^="mdl-cell"] {
     padding: 0;
+    width: 100%;
   }
-
-}
+}*/
 
 
 
@@ -265,27 +268,14 @@ margin-right: 10px;
 /* prasarna */
 .mdl-tooltip {
   font-size: 11px;
+  letter-spacing: 0.02em;
   padding: 12px;
+  max-width: 300px;
 }
 
-.mdl-tooltip--right.tooltip-triangle {
-  padding: 12px;
 
-}
 
-.mdl-tooltip--right.tooltip-triangle:before {
-  width: 0;
-  height: 0;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
 
-  border-right:10px solid rgba(97,97,97, 0.9);
-display: block;
-content: '';
-position: fixed;
-left: -8px;
-top: 14px;
-}
 
 
 .data-table .tbody-alert {
@@ -331,8 +321,12 @@ td.tbody-cell-toolbar {
 
 }
 
-.table-pagination
-
+/* INPUT */
+.mdl-textfield.is-dirty .mdl-textfield__label.label-static {
+  visibility: visible;
+  position: static;
+  font-size: 14px;
+}
 
 
 
