--- a/css/material_edit.css
+++ b/css/material_edit.css
@@ -8,6 +8,10 @@ a {
 select {
   cursor: pointer;
 }
+legend {
+  padding: 0;
+}
+
 .toleft {
   float: left;
 }
@@ -264,6 +268,16 @@ margin-right: 10px;
 
 }
 
+.data-table .colored-divider {
+  position: absolute;
+  left: 0;
+  top: auto;
+  background-color: rgb(77, 144, 240);
+  height: 100%;
+
+
+}
+
 
 /* prasarna */
 .mdl-tooltip {
@@ -330,7 +344,14 @@ td.tbody-cell-toolbar {
 
 
 
+/* MATERIAL ICONS */
+/*.material-icons.md-32 { font-size: 32px; }*/
 
+
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; }
 
 
 
