--- a/css/material_edit.css
+++ b/css/material_edit.css
@@ -131,46 +131,48 @@ legend {
 
 
 /* DATA TABLE */
-.card-data-table .mdl-card__title {
-  /*background-color: #f5f5f5;*/
-  /*height: 56px;*/
-
-}
 .data-table.mdl-shadow--2dp {
   border: 0;
-
 }
-
-.data-table .table-title-upper {
+.data-table .table-title { /* dať cez style, keď málo použivané */
   font-size: 14px;
-  text-transform: uppercase;
   letter-spacing: 0.02em;
-
+}
+.data-table .title-upper { /* dať cez style, keď málo použivané */
+  text-transform: uppercase;
 }
 
-.data-table thead th {
-  line-height: 1.3;
+
+.data-table th {
+  line-height: 1;
   font-weight: 500;
   /*background-color: #f5f5f5;*/
   vertical-align: middle;
+  padding: 0;
+  height: 32px;
+}
+.data-table thead tr.two-line th {
+  line-height: 1.3;
+  height: 48px;
   padding-bottom: 6px;
   padding-top: 10px;
-  /*height: unset;*/
-  padding-left: 0px;
-  padding-right: 0px;
 }
+
 
 .data-table td {
   line-height: 1.2;
   vertical-align: middle;
-  padding-top: 0;
-  padding-bottom: 0;
   min-height: 32px;
   white-space: normal;
-  padding-left: 0px;
-  padding-right: 0px;
+  padding: 0;
+
   /*min-width: 50px;*/
 }
+.data-table thead tr, .data-table tbody tr {
+  height: 32px;
+}
+
+
 .data-table tfoot td {
   height: 48px;
   border: 0;
@@ -187,6 +189,54 @@ legend {
     padding-right: 8px;
   }
 }
+.data-table .card-row-edit .mdl-navigation__link:hover {
+  background-color: lightgrey;
+}
+
+
+
+
+.data-table .card-row-edit .mdl-navigation__link {
+padding: 12px 2px 12px 24px;
+line-height: 1.2;
+
+}
+@media screen and (max-width: 1024px) {
+  .data-table .card-row-edit .mdl-navigation__link {
+    padding-left: 8px;
+  }
+}
+.data-table .card-row-edit .mdl-navigation__link.active {
+  color: #fff;
+  font-weight: 500;
+  position: relative;
+  background-color: rgb(2,136,209);
+}
+.data-table .card-row-edit .mdl-navigation__link.active .mdl-list__item-sub-title {
+  color: #fff;
+}
+.data-table .card-row-edit .mdl-navigation__link .circle {
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  position: relative;
+  top: 4px;
+  left: 6px;
+  background-color: rgba(0,0,0, 0.54);
+}
+.data-table .card-row-edit .mdl-navigation__link.active .circle {
+  background-color: #fff;
+}
+
+.mini-row-echo .mini-icon-btn { /* dopyt, lepšia class, budem používať na viacerých miestach */
+  visibility: hidden;
+}
+.mini-row-echo:hover .mini-icon-btn {
+  visibility: visible;
+}
+
+
 
 
 
@@ -235,18 +285,18 @@ legend {
 
 
 .data-table tbody .one-line {
-  line-height: 1.2;
-  height: 48px;
+/*  line-height: 1.2;
+  height: 48px;*/
 }
 .data-table tbody .one-line.slim-row {
-  height: 42px;
+  /*height: 42px;*/
 }
 
 
 
 .data-table .mdl-list__item {
   font-size: 14px;
-  letter-spacing: 0;
+  letter-spacing: 0.02em;
   font-weight: 500;
   padding: 10px 0;
 
