Číselník užívateľov MD
#184
Zoznam
- vyhľadávanie na pevno
- floating action button pláva
- tooltip na výpise práv podsystémov
- zablokované tlačidlo na zmazanie užívateľa

Uprava
- v sekcii firmy a skripty v záhlaví tabuľky pridaná ikona na zobrazenie
číselníka firiem v pdf
- tlačidlo "uložiť" nasekané podľa sekcií a obalené "uvolni"
- v sekcii "firmy" a "skripty" presunuté tlačidlo "uložiť" do zoznamu
- pridané h_id do úpravy užívateľa
- v grid sekcii schované tlačidlo "uložiť"

Todo
- príprava na tlač grid karty do pdf
- príprava na tlač zoznamu užívateľov do pdf
- rozbehať vyhľadávanie
- dotiahnuť do číselníka užívateľov číselník firiem (číslo,názov, rok
firmy), kvôli: v hlavnom zozname bude tooltip na číslo firmy, tooltip na
číslo firmy v sekcii firmy v úprave užívateľa a html nápoveda k vypĺňanu
firiem (ako pri skriptoch), aby užívateľ vedel, aké sú firmy na doméne
dostupné
- rozbehať aktívny v úprave užívateľa
- doplniť stav nový užívateľ
- v hlavnom zozname v stĺpci "Firmy" echo firiem v novom formáte dávať
za sebou a oddeliť čiarkou
- v hlavnom zozname doplniť "0" v echo práv podsystémov, pretože keď nie
je, tak potom neviem v zozname, ktorá čísla patrí ktorému podsystému
- rozbehať tlačidlo uložiť a uvolni
Nápad: v úprave užívateľa v ľavej sekcii preklikávacie šipky (tam,
späť), keď napr. upravujem viacero užívateľov, tak by som nemusel chodiť
do zoznamu a späť.

--- a/css/material_edit.css
+++ b/css/material_edit.css
@@ -117,12 +117,14 @@ legend {
 /* floating action button */
 .floating-toolbar {
   z-index: 10;
-  position: absolute;
-  right: 20px;
-  width: 56px;
+  position: fixed;
+  right: 2%;
+  display: flex;
+  flex-direction: column;
+  /*width: 56px;*/
 }
 .floating-toolbar > .mdl-button {
-  margin-bottom: 24px;
+  margin-bottom: 16px;
 }
 
 
@@ -192,6 +194,32 @@ legend {
 .data-table .card-row-edit .mdl-navigation__link:hover {
   background-color: lightgrey;
 }
+
+.grid-table tr {
+  height: 26px !important;
+}
+.grid-table tr:hover {
+  background-color: transparent !important;
+}
+.grid-table th {
+  font-size: 12px;
+  height: 24px;
+  text-align: center;
+  padding: 0 !important;
+  background-color: rgb(238,238,238) !important;
+
+}
+.grid-table td {
+  font-size: 13px;
+  padding: 0 !important;
+  text-align: center;
+  height: 28px;
+}
+.grid-table td:hover {
+background-color: rgb(238,238,238) !important;
+}
+
+
 
 
 
