--- a/css/material_edit.css
+++ b/css/material_edit.css
@@ -1,25 +1,29 @@
-/* MY EDIT */
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; /* width + padding + border */
+}
+*, *:after, *:before {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
 body {
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+  line-height: 1;
 }
 a {
   text-decoration: none;
+  display: inline-block;
+}
+table {
+  border-collapse: collapse;
+  width: 100%;
 }
 select {
   cursor: pointer;
 }
-legend {
-  padding: 0;
-}
-
-.toleft {
-  float: left;
-}
-.toright {
-  float: right;
-}
-.tocenter {
-  margin: auto;
+/* BASIC CLASS */
+.center {
+  text-align: center;
 }
 .left {
   text-align: left;
@@ -27,36 +31,232 @@ legend {
 .right {
   text-align: right;
 }
-.center {
-  text-align: center;
+.tocenter {
+  margin: auto;
+}
+.toleft {
+  float: left;
+}
+.toright {
+  float: right;
 }
 .vacenter {
   vertical-align: middle;
+}
+.vatop {
+  vertical-align: top;
 }
 .full-width {
   width: 100%;
 }
 .clearfix:after {
-  content: '';
+/*  content: '';
   display: table;
-  clear: both;
+  clear: both;*/
 }
 .flexbox {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-
 }
-
-
 
 .ukaz {
   outline: 1px solid red;
   border: 1px solid red;
 }
+.material-icons.md-18 {
+  font-size: 18px;
+}
+.material-icons.md-64 {
+  font-size: 64px;
+}
+/* CHANGE DEFAULT */
+.mdl-layout__header-row {
+  padding: 0 24px 0 80px;
+}
+.mdl-layout--no-drawer-button .mdl-layout__header-row {
+  padding-left: 24px;
+}
+.mdl-tooltip {
+  font-size: 11px;
+  letter-spacing: 0.02em;
+  padding: 12px;
+  max-width: 300px;
+  /*text-transform: none;*/
+}
 
 
 /* HEADER */
+.ui-header-app-row, .ui-header-table {
+  height: 40px;
+}
+.ui-header-three-row.is-compact {
+  max-height: 136px;
+}
+.ui-header-app-row .mdl-layout-title {
+  font-size: 12px;
+  /*font-weight: 400;*/
+}
+.ui-header-page-row {
+  height: 56px;
+  padding: 0 20px 0 56px;
+}
+.ui-header-page-row .mdl-layout-title {
+  font-size: 18px;
+}
+.ui-header-app-row .user-avatar {
+  /*width: 32px;*/
+  /*height: 32px;*/
+  /*line-height: 32px;*/
+  background-color: #5C6BC0;
+  text-align: center;
+  letter-spacing: 0.02em;
+  font-size: 12px;
+  /*min-width: 32px;*/
+  border-radius: 50%;
+}
+.mdl-layout__header-row.ui-header-table {
+  padding: 0;
+}
+
+.search-box {
+  border-radius: 2px;
+  height: 40px;
+  width: 300px;
+  padding: 4px 48px;
+}
+.search-box > * {
+  opacity: .7;
+}
+.search-box.is-focused > * {
+  opacity: 1;
+}
+.search-box.is-focused .mdl-textfield__label:after {
+  visibility: hidden;
+}
+.search-box .mdl-button--icon {
+  position: absolute;
+}
+.search-box input[type=text]::-ms-clear { /* ie hidden clear "x" */
+    display: none;
+}
+
+/* empty state */
+.ui-no-item {
+  display: none;
+  margin: 15% auto 5%;
+  width: 300px;
+  height: 120px;
+  text-align: center;
+}
+.no-item-alert {
+  letter-spacing: 0.02em;
+  font-size: 16px;
+  font-weight: 500;
+  padding-top: 32px;
+}
+
+
+
+.ui-table, .ui-table-pagination {
+  max-width: 1200px;
+}
+.ui-table tr {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+}
+.ui-table tr:first-of-type {
+  border-top-color: rgba(0, 0, 0, 0);
+}
+
+.ui-table th {
+  font-size: 11px;
+  font-weight: 500;
+  line-height: 1.2;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-overflow: ellipsis;
+  position: relative;
+  height: 40px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  padding: 0 0 0 0;
+}
+.ui-table th:first-of-type {
+  padding-left: 24px;
+}
+.ui-table th:last-of-type {
+  padding-right: 24px;
+}
+.ui-table th .md-18 {
+  vertical-align: -5px;
+}
+
+.ui-table .row-echo:hover {
+  background-color: #eee;
+}
+
+.ui-table tr:last-of-type td {
+  /*border: 0;*/
+}
+
+
+
+
+
+.ui-table .row-form td:first-of-type:before {
+  background-color: #39f;
+  width: 3px;
+  display: inline-block;
+  height: 100%;
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.ui-table td {
+  /*height: 42px;*/
+  height: 40px;
+
+  font-size: 13px;
+  color: rgba(0,0,0, 0.87);
+
+  line-height: 1.2;
+  /*vertical-align: middle;*/
+  position: relative;
+  padding: 0;
+}
+.ui-table td:first-of-type {
+  padding-left: 24px;
+}
+.ui-table td:last-of-type {
+  padding-right: 24px;
+
+}
+
+
+.ui-table-pagination {
+  height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 12px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.ui-table-pagination .mdl-textfield__input {
+  font-size: 12px;
+  display: inline;
+  margin: 0 4px;
+  width:auto;
+}
+
+
+
+
+
 .ui-header {
   min-height: 48px;
 }
@@ -77,7 +277,9 @@ legend {
 }
 /* header navigation */
 .ui-app-row .header-nav {
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 300px;
   height: 56px;
   /*position: absolute;*/
