--- a/css/material_edit.css
+++ b/css/material_edit.css
@@ -18,7 +18,7 @@ table {
   border-collapse: collapse;
   width: 100%;
 }
-select {
+select:enabled {
   cursor: pointer;
 }
 /* BASIC CLASS */
@@ -64,12 +64,7 @@ select {
   outline: 1px solid red;
   border: 1px solid red;
 }
-.material-icons.md-18 {
-  font-size: 18px;
-}
-.material-icons.md-64 {
-  font-size: 64px;
-}
+
 /* CHANGE DEFAULT */
 .mdl-layout__header-row {
   padding: 0 24px 0 80px;
@@ -82,20 +77,22 @@ select {
   letter-spacing: 0.02em;
   padding: 12px;
   max-width: 300px;
-  /*text-transform: none;*/
+  text-transform: none;
 }
+
+
 
 
 /* HEADER */
-.ui-header-app-row, .ui-header-table {
-  height: 40px;
-}
-.ui-header-three-row.is-compact {
-  max-height: 136px;
-}
-.ui-header-app-row .mdl-layout-title {
+.ui-header-app-row {
   font-size: 12px;
-  /*font-weight: 400;*/
+  letter-spacing: .02em;
+}
+.ui-header .mdl-button.mdl-color-text--blue-grey-50 :hover {
+  color: #fff;
+}
+.ui-header-app-row { /* dopyt, po prerobení hlavičky pôjde preč*/
+  height: 40px;
 }
 .ui-header-page-row {
   height: 56px;
@@ -104,26 +101,36 @@ select {
 .ui-header-page-row .mdl-layout-title {
   font-size: 18px;
 }
-.ui-header-app-row .user-avatar {
-  /*width: 32px;*/
-  /*height: 32px;*/
-  /*line-height: 32px;*/
-  background-color: #5C6BC0;
+
+
+
+
+
+
+
+
+.avatar {
+  display: inline-block;
+  border-radius: 50%;
+  font-size: 12px;
   text-align: center;
   letter-spacing: 0.02em;
-  font-size: 12px;
-  /*min-width: 32px;*/
-  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  line-height: 32px;
 }
-.mdl-layout__header-row.ui-header-table {
-  padding: 0;
-}
+
+
+
+
+
 
 .search-box {
   border-radius: 2px;
   height: 40px;
   width: 300px;
   padding: 4px 48px;
+
 }
 .search-box > * {
   opacity: .7;
@@ -141,12 +148,16 @@ select {
     display: none;
 }
 
+.mdl-layout__content {
+  /*padding-bottom: 50px;*/
+}
+
+
+
 /* empty state */
 .ui-no-item {
-  display: none;
-  margin: 15% auto 5%;
   width: 300px;
-  height: 120px;
+  height: 110px;
   text-align: center;
 }
 .no-item-alert {
@@ -156,85 +167,56 @@ select {
   padding-top: 32px;
 }
 
-
-
-.ui-table, .ui-table-pagination {
+.container {
   max-width: 1200px;
 }
-.ui-table tr {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-  border-top: 1px solid rgba(0, 0, 0, 0.12);
-}
-.ui-table tr:first-of-type {
-  border-top-color: rgba(0, 0, 0, 0);
-}
 
+/* TABLE */
+.ui-table tr:not(:first-of-type) {
+  border-bottom: 1px solid #CFD8DC;
+  border-top: 1px solid #CFD8DC;
+}
+.ui-table-content tr:not(.row-form):hover {
+  background-color: #ECEFF1;
+}
+.ui-table tr {
+  height: 40px;
+}
 .ui-table th {
   font-size: 11px;
   font-weight: 500;
   line-height: 1.2;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  text-overflow: ellipsis;
   position: relative;
-  height: 40px;
+  height: inherit;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  padding: 0 0 0 0;
 }
-.ui-table th:first-of-type {
+.ui-table-header th:first-of-type, .ui-table-content .row-echo th:first-of-type {
   padding-left: 24px;
 }
-.ui-table th:last-of-type {
+.ui-table-header th:last-of-type, .ui-table-content .row-echo th:last-of-type {
   padding-right: 24px;
 }
-.ui-table th .md-18 {
+.ui-table th .md-18 { /*dopyt, dať cez style*/
   vertical-align: -5px;
 }
 
-.ui-table .row-echo:hover {
-  background-color: #eee;
-}
-
-.ui-table tr:last-of-type td {
-  /*border: 0;*/
-}
-
-
-
-
-
-.ui-table .row-form td:first-of-type:before {
-  background-color: #39f;
-  width: 3px;
-  display: inline-block;
-  height: 100%;
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
 .ui-table td {
-  /*height: 42px;*/
-  height: 40px;
-
+  height: inherit;
   font-size: 13px;
-  color: rgba(0,0,0, 0.87);
-
+  color: rgba(0,0,0,.87);
   line-height: 1.2;
-  /*vertical-align: middle;*/
   position: relative;
-  padding: 0;
 }
 .ui-table td:first-of-type {
   padding-left: 24px;
 }
 .ui-table td:last-of-type {
   padding-right: 24px;
-
 }
-
+.ui-table td strong {
+  font-weight: 500;
+}
 
 .ui-table-pagination {
   height: 40px;
@@ -250,148 +232,179 @@ select {
   font-size: 12px;
   display: inline;
   margin: 0 4px;
-  width:auto;
+  width: auto;
+}
+
+
+
+/* GRID TABLE */
+.grid-table col:not(:first-of-type) {
+  border-left: 1px solid lightgrey;
+}
+.grid-table tr {
+  height: 30px;
+}
+.grid-table tr:last-of-type {
+  border: 0;
+}
+.grid-table th {
+  font-size: 12px;
+  height: 24px;
+  text-align: center;
+}
+.grid-table td {
+  text-align: center;
+  height: 24px;
+}
+.grid-table td:first-of-type {
+  padding-left: 0;
+}
+.grid-table td:last-of-type {
+  padding-right: 0;
+}
+.grid-table-tools .mdl-button, .grid-table-tools .mdl-menu__item {
+  color: #757575;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+.grid-table-tools .material-icons {
+  margin: -1px 16px 0 0;
 }
 
 
 
 
-
-.ui-header {
-  min-height: 48px;
-}
-.ui-app-row {
-  height: 56px;
-}
-@media screen and (max-width: 1024px) {
-  .mdl-layout--no-desktop-drawer-button .ui-header .ui-app-row {
-    padding-left: 56px;
-  }
-}
-.ui-app-row .mdl-layout-title {
-  font-size: 16px;
-  padding-top: 2px;
-}
-.ui-app-row .mdl-layout-title > a {
-  font-weight: 400;
-}
-/* header navigation */
-.ui-app-row .header-nav {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 300px;
-  height: 56px;
-  /*position: absolute;*/
-/*  top: 0;
-  left: 50%;
-  margin-left: -150px;*/
-}
-.ui-app-row .header-nav-link {
-  height: 53px;
-  line-height: 58px;
-  border-bottom: 3px solid transparent;
-  padding: 0 24px;
-  color: rgba(255,255,255,.7); /*dopyt, kopíroval som z firebase, možno iná farba*/
-  opacity: unset;
-  letter-spacing: 0.02em;
-}
-.ui-app-row .header-nav-link:hover, .ui-app-row .header-nav-link.active {
-  color: rgba(255,255,255,1);
-}
-.ui-app-row .header-nav-link.active {
-  border-bottom-color: #fff;
-}
-
-
-/* header user info */
-.header-list .mdl-list__item {
-  font-size: 14px;
-  letter-spacing: 0.02em;
-  padding: 0;
-  min-height: 32px;
-}
-.item-avatar-md.material-icons {
-  height: 32px;
-  width: 32px;
-  font-size: 32px;
-  margin-right: 10px;
-}
-
-/* BUTTON */
-/* floating action button */
-.floating-toolbar {
-  z-index: 10;
-  position: fixed;
-  right: 2%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.row-form .mdl-navigation {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  /*width: 56px;*/
 }
-.floating-toolbar > .mdl-button {
-  margin-bottom: 16px;
-}
-
-
-
-
-
-
-/* DATA TABLE */
-.data-table.mdl-shadow--2dp {
-  border: 0;
-}
-.data-table .table-title { /* dať cez style, keď málo použivané */
-  font-size: 14px;
-  letter-spacing: 0.02em;
-}
-.data-table .title-upper { /* dať cez style, keď málo použivané */
-  text-transform: uppercase;
-}
-
-
-.data-table th {
-  line-height: 1;
-  font-weight: 500;
-  /*background-color: #f5f5f5;*/
-  vertical-align: middle;
-  padding: 0;
-  height: 32px;
-}
-.data-table thead tr.two-line th {
-  line-height: 1.3;
-  height: 48px;
-  padding-bottom: 6px;
-  padding-top: 10px;
-}
-
-
-.data-table td {
+.row-form .mdl-navigation__link {
+  padding: 12px 0 12px 24px;
+  width: 100%;
   line-height: 1.2;
-  vertical-align: middle;
-  min-height: 32px;
-  white-space: normal;
-  padding: 0;
-
-  /*min-width: 50px;*/
 }
-.data-table thead tr, .data-table tbody tr {
-  height: 32px;
+@media screen and (max-width: 1024px) {
+  .row-form .mdl-navigation__link {
+    padding-left: 8px;
+  }
+}
+.row-form .mdl-navigation__link:hover {
+  background-color: #E0E0E0;
+}
+.row-form .mdl-navigation__link.active {
+  color: #fff;
+  font-weight: 500;
+  background-color: #039BE5;
+}
+.row-form-content legend {
+  min-width: 48px;
+  margin-top: 16px;
 }
 
 
-.data-table tfoot td {
-  height: 48px;
-  border: 0;
-  font-size: 12px;
-  /*color: rgba(0, 0, 0, 0.54);*/
+
+
+.row-form-content .mdl-textfield {
+  /*height: 64px;*/
   /*line-height: 1;*/
+
 }
+
+.row-echo .mini-icon-btn {
+  height: 24px;
+  min-width: 24px;
+  width: 24px;
+
+}
+
+
+
+
+
+
+
+
+
+.dot {
+  border-radius: 50%;
+  width: 6px;
+  height: 6px;
+  display: inline-block;
+}
+
+
+
+
+
+
+
+
+/* FOOTER */
+.mdl-mini-footer .mdl-logo, .mdl-mini-footer__link-list a {
+  font-size: 12px;
+  font-weight: 400;
+}
+.mdl-mini-footer__link-list a:hover {
+  text-decoration: underline;
+}
+
+
+
+
+
+
+.ui-table .text-chip {
+  border-radius: 8px;
+  display: inline-block;
+  height: 16px;
+  line-height: 16px;
+  font-size: 12px;
+  /*font-weight: 400;*/
+  padding: 0 10px;
+
+  /*color: rgba(0,0,0, 0.87);*/
+  /*background-color: #CFD8DC;*/
+
+
+  position: relative; /*dopyt,urobiť inak */
+  top: 3px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* BUTTON */
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media screen and (max-width: 1024px) {
   .data-table td:first-of-type, .data-table th:first-of-type {
@@ -401,229 +414,9 @@ select {
     padding-right: 8px;
   }
 }
-.data-table .card-row-edit .mdl-navigation__link:hover {
-  background-color: lightgrey;
-}
-
-.grid-table tr {
-  height: 26px !important;
-}
-.grid-table tr:hover {
-  background-color: transparent !important;
-}
-.grid-table th {
-  font-size: 12px;
-  height: 24px;
-  text-align: center;
-  padding: 0 !important;
-  background-color: rgb(238,238,238) !important;
-
-}
-.grid-table td {
-  font-size: 13px;
-  padding: 0 !important;
-  text-align: center;
-  height: 28px;
-}
-.grid-table td:hover {
-background-color: rgb(238,238,238) !important;
-}
 
 
 
-
-
-
-.data-table .card-row-edit .mdl-navigation__link {
-padding: 12px 2px 12px 24px;
-line-height: 1.2;
-
-}
-@media screen and (max-width: 1024px) {
-  .data-table .card-row-edit .mdl-navigation__link {
-    padding-left: 8px;
-  }
-}
-.data-table .card-row-edit .mdl-navigation__link.active {
-  color: #fff;
-  font-weight: 500;
-  position: relative;
-  background-color: rgb(2,136,209);
-}
-.data-table .card-row-edit .mdl-navigation__link.active .mdl-list__item-sub-title {
-  color: #fff;
-}
-.data-table .card-row-edit .mdl-navigation__link .circle {
-  display: inline-block;
-  width: 6px;
-  height: 6px;
-  border-radius: 50%;
-  position: relative;
-  top: 4px;
-  left: 6px;
-  background-color: rgba(0,0,0, 0.54);
-}
-.data-table .card-row-edit .mdl-navigation__link.active .circle {
-  background-color: #fff;
-}
-
-.mini-row-echo .mini-icon-btn { /* dopyt, lepšia class, budem používať na viacerých miestach */
-  visibility: hidden;
-}
-.mini-row-echo:hover .mini-icon-btn {
-  visibility: visible;
-}
-
-
-
-
-
-.data-table .table-row-menu i {
-  /*line-height: 48px;*/
-  /*vertical-align: middle;*/
-
-}
-
-
-/* prasarna */
-/*@media screen and (max-width: 1024px) {
-  .mdl-grid, *[class^="mdl-cell"] {
-    padding: 0;
-    width: 100%;
-  }
-}*/
-
-
-
-
-
-
-
-.card-data-table .mdl-card__title .mdl-textfield__label:after {
-}
-
-.card-data-table .mdl-card__title .mdl-textfield.is-focused {
-  /*background-color: #fff;*/
-  /*width: 100%;*/
-}
-.card-data-table .mdl-card__title .mdl-textfield__input {
-  /*border: 0;*/
-  /*font-size: 16px;*/
-}
-
-
-
-
-@media screen and (max-width: 1024px) {
-.data-table thead th {
-/*    padding-left: 0px;
-    padding-right: 0px;*/
-  }
-}
-
-
-.data-table tbody .one-line {
-/*  line-height: 1.2;
-  height: 48px;*/
-}
-.data-table tbody .one-line.slim-row {
-  /*height: 42px;*/
-}
-
-
-
-.data-table .mdl-list__item {
-  font-size: 14px;
-  letter-spacing: 0.02em;
-  font-weight: 500;
-  padding: 10px 0;
-
-}
-
-.data-table .mdl-list__item .mdl-list__item-avatar {
-  font-size: 12px;
-  text-align: center;
-  height: 32px;
-  line-height: 32px;
-  width: 32px;
-border: 1px solid rgba(0,0,0,0.24);
-background-color: #fff;
-color: rgba(0,0,0,0.54);
-margin-right: 10px;
-}
-.data-table .broken-text {
-/*max-width: 200px;*/
-/*white-space: normal;*/
-
-}
-
-.data-table .colored-divider {
-  position: absolute;
-  left: 0;
-  top: auto;
-  background-color: rgb(77, 144, 240);
-  height: 100%;
-
-
-}
-
-
-
-/* prasarna */
-.mdl-tooltip {
-  font-size: 11px;
-  letter-spacing: 0.02em;
-  padding: 12px;
-  max-width: 300px;
-}
-
-
-
-
-
-
-.data-table .tbody-alert {
-  color: rgba(0,0,0,0.54);
-  font-size: 16px;
-  margin: 26px auto;
-}
-
-
-
-.data-table .text-chip {
-  color: rgba(0,0,0, 0.87);
-  background-color: #dedede;
-  border-radius: 10px;
-  display: inline-block;
-  height: 16px;
-  line-height: 16px;
-  font-size: 12px;
-  /*font-weight: 400;*/
-  padding: 0 10px;
-  position: relative;
-  top: 3px;
-  margin-right: 3px;
-}
-
-
-
-
-
-
-
-td.tbody-cell-toolbar {
-  text-align: center;
-}
-.tbody-cell-toolbar > button {
-  outline: 0px solid red;
-  margin: 0 3%;
-}
-
-.table-header thead {
-  line-height: 1;
-  padding-bottom: 0;
-
-}
 
 /* INPUT */
 .mdl-textfield.is-dirty .mdl-textfield__label.label-static {
@@ -635,17 +428,8 @@ td.tbody-cell-toolbar {
 
 
 /* MATERIAL ICONS */
-/*.material-icons.md-32 { font-size: 32px; }*/
-
-
 .material-icons.md-18 { font-size: 18px; }
-.material-icons.md-24 { font-size: 24px; }
-.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-32 { font-size: 32px; }
+.material-icons.md-40 { font-size: 40px; }
 .material-icons.md-48 { font-size: 48px; }
-
-.skusam td {
-  height: 32px;
-  border-bottom: 1px solid #9c9c9c;
-  border-collapse: collapse;
-}
-
+.material-icons.md-64 { font-size: 64px; }
