--- a/css/material_edit.css
+++ b/css/material_edit.css
@@ -9,6 +9,7 @@ html {
 body {
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
   line-height: 1;
+
 }
 a {
   text-decoration: none;
@@ -82,6 +83,9 @@ select:enabled, button:enabled {
   max-width: 300px;
   text-transform: none;
 }
+
+
+
 /*.mdl-layout__tab {
   color: rgba(255,255,255,0.6);
   height: 64px;
@@ -226,6 +230,7 @@ abbr.dot {
 
 .container { /* dopyt, v každom skripte môže byť iný */
   max-width: 1200px;
+  width: 100%;
 }
 
 .mdl-color--light-blue-600 .data-table th {
@@ -440,14 +445,7 @@ abbr.dot {
 
 
 
-/* FOOTER */
-.mdl-mini-footer .mdl-logo, .mdl-mini-footer__link-list a {
-  font-size: 12px;
-  font-weight: 400;
-}
-.mdl-mini-footer__link-list a:hover {
-  text-decoration: underline;
-}
+
 
 
 
@@ -463,11 +461,28 @@ abbr.dot {
 }
 
 
+/* FOOTER */
+.mdl-mini-footer .mdl-logo, .mdl-mini-footer__link-list a {
+  font-size: 12px;
+  font-weight: 400;
+}
+.mdl-mini-footer__link-list a:hover {
+  text-decoration: underline;
+}
 
-
-
-
-
+.mdl-layout__content.sticky-footer {
+  display: flex;
+  flex-direction: column;
+}
+.mdl-layout__content.sticky-footer .mdl-mini-footer {
+  padding-top: 32px;
+  padding-bottom: 0;
+}
+.mdl-mini-footer.container {
+  margin: auto;
+  padding-left: 0;
+  padding-right: 0;
+}
 
 
 
